--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -59,6 +59,26 @@
 
 <script>
 
+    window.addEventListener("keydown", function (e){
+      const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+      const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
+      if (!audio) return; // Stops the function from running
+      audio.currentTime= 0; // Rewind
+      audio.play();
+      key.classList.add('playing');
+
+    });
+
+    function removeTransition(e){
+      if(e.propertyName !== 'transform') return; // Skip if it's not a transform
+      this.classList.remove('playing');
+    }
+
+const keys = document.querySelectorAll('.key');
+keys.forEach(key => key.addEventListener('transitionend', removeTransition));
+
+
+
 </script>
 
 
