--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -5,6 +5,8 @@
   <title>JS + CSS Clock</title>
 </head>
 <body>
+  <div class="aika" id="aika">
+  </div>
 
 
     <div class="clock">
@@ -12,6 +14,10 @@
         <div class="hand hour-hand"></div>
         <div class="hand min-hand"></div>
         <div class="hand second-hand"></div>
+        <div class="twelve">12</div>
+        <div class="three">3</div>
+        <div class="six">6</div>
+        <div class="nine">9</div>
       </div>
     </div>
 
@@ -58,16 +64,105 @@
 
     .hand {
       width:50%;
-      height:6px;
+      height:4px;
       background:black;
       position: absolute;
       top:50%;
+      transform-origin: 100%;
+      transform: rotate(90deg);
+      transition: all 0.05s;
+      transition-timing-function: cubic-bezier(0.2, 2,5, 0.58, 1);
+    }
+
+    .hour-hand {
+      height: 8px;
+      border-color: red;
+      border-style: solid;
+      width:30%;
+      right: 50%;
+    }
+
+    .min-hand {
+      height: 6px;
+      width: 40%;
+      right: 50%;
+    }
+
+    .three {
+      font-size: 150%;
+      position: fixed;
+      top: 133px;
+      left: 323px;
+      font-weight: bold;
+    }
+
+    .six {
+      font-size: 150%;
+      position: fixed;
+      top: 315px;
+      left: 143px;
+      font-weight: bold;
+    }
+
+    .nine {
+      font-size: 150%;
+      position: fixed;
+      top: 133px;
+      left: -35px;
+      font-weight: bold;
+    }
+
+    .twelve {
+      font-size: 150%;
+      position: fixed;
+      left: 138px;
+      top: -42px;
+      font-weight: bold;
+    }
+
+    .aika {
+      font-weight: bold;
+      width: 200px;
+      height: 100px;
+      position: absolute;
+      top:0;
+      bottom: -300;
+      left: 0;
+      right: 0;
+      margin: auto;
     }
 
   </style>
 
   <script>
+    const secondHand = document.querySelector('.second-hand');
+    const minsHand = document.querySelector('.min-hand');
+    const hourHand = document.querySelector('.hour-hand');
 
+    function setDate() {
+
+      const now = new Date();
+
+      const seconds = now.getSeconds();
+      const minutes = now.getMinutes();
+      const hours = now.getHours();
+
+      const hoursDegrees = ((hours / 12) * 360) + 90;
+      const minutesDegrees = ((minutes / 60 ) * 360) + 90;
+      const secondsDegrees = ((seconds / 60) * 360) +90;
+
+      secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
+      minsHand.style.transform = `rotate(${minutesDegrees}deg)`;
+      hourHand.style.transform = `rotate(${hoursDegrees}deg)`;
+
+
+      // Digital clock extra
+      document.getElementById('aika').innerHTML = "Current time is: " + hours + ":" + minutes + ":" + seconds;
+
+
+    }
+
+    setInterval(setDate, 1000);
 
   </script>
 </body>
